# tomi-metric-collector

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  render.yaml
docs/: API-FORZAR-GUARDADO-SPEC.md
scripts/: create_sensor_gif.py
tomi_metrics/: app.py  monitor_estanque.py
tomi_metrics/static/css/: animation.css  monitor.css  style.css
tomi_metrics/static/js/: main.js  monitor.js
tomi_metrics/templates/: home.html  login.html  monitor.html
