[tool.poetry]
name = "tomi-metrics"
version = "0.1.0"
description = ""
authors = ["Edgar"]
readme = "README.md"
packages = [{include = "tomi_metrics"}]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.3"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
